# herofy

./: .gcloudignore  .gitignore  README.md  TEST_SIGNAL_WATCHER.md  deploy-cloud-prod.sh  docker-compose.yml  firebase.json  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  seed_catalog.py
backend/agents/: __init__.py
backend/core/: __init__.py  encryption.py  errors.py  events.py  logging.py  metrics.py  model_config.py  permissions.py  retry.py  telemetry.py  transactions.py  types.py  validation.py
backend/db/: __init__.py  client.py  dataconnect_client.py
backend/docs/: PROMPTS_REFERENCE.md
backend/integrations/: __init__.py
backend/middleware/: __init__.py  auth.py  scheduler_auth.py
backend/orchestrator/: README.md  __init__.py  artifacts.py  huddle_responder.py
backend/routes/: __init__.py  agents.py  ai.py  auth.py  customers.py  demo.py  enrichment.py  health.py  integrations.py  internal.py  orchestrator.py  setup.py  sidekick.py  sync.py  team.py  test.py  waitlist.py  webhooks.py
backend/scripts/: seed_pinecone.py
backend/services/: __init__.py  agent_run_service.py  calendar_attendee_resolver.py  claims_service.py  commitment_reliability.py  customer_classifier.py  customer_factory.py  customer_insights_service.py  customer_service.py  customer_service_dc.py  draft_generation_service.py  email.py  engagement_health_service.py  engagement_trend_service.py  enrichment_models.py  enrichment_service.py  firestore_service.py  handoff_service.py  (+23 more)
(+364 files in other folders)
