[tool.poetry]
name = "herofy-backend"
version = "1.0.0"
description = "Herofy Python Backend - Autonomous agents for customer success workspace"
authors = ["Herofy Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# FastAPI & Server
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.9.0"}
pydantic-settings = "^2.5.0"

# Database
asyncpg = "^0.29.0"

# Google AI
# Using unified google-genai SDK (google-generativeai is deprecated as of Nov 2025)
google-genai = "^1.72"
google-adk = "^1.0.0"
pinecone = "^3.0"

# Firebase Auth
firebase-admin = "^6.5.0"

# OAuth & Encryption
cryptography = "^42.0.0"
google-api-python-client = "^2.150.0"
google-auth = "^2.35.0"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"

# Slack Integration
slack-bolt = "^1.18.0"

# Utilities
python-dotenv = "^1.0.0"
structlog = "^24.4.0"
python-json-logger = "^2.0.7"
httpx = "^0.28.0"
resend = "^2.30.1"
langfuse = "^4.7.1"
openinference-instrumentation-google-adk = {version = "^0.1.15", python = ">=3.12,<3.15"}
authlib = ">=1.6.12,<1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
